# pipecat-fish

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  llm.py  pyproject.toml
