[project]
name = "pipecat-fish"
version = "0.1.0"
description = "Minimal Pipecat voice agent — Fish Audio TTS, Deepgram Flux / AssemblyAI STT, swappable OpenAI-compatible (Gemma) LLM"
requires-python = ">=3.10"
dependencies = [
    # deepgram/assemblyai -> STT, openai -> LLM, fish -> TTS, silero -> VAD,
    # webrtc/daily -> transports, runner -> local dev server.
    "pipecat-ai[webrtc,daily,silero,assemblyai,deepgram,openai,fish,runner]",
    "pipecat-ai-cli",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]
